--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <section class="container">
   <h1 class="titulo">Github Api Get Request</h1>
-  <app-users
+  <app-users [item]="item"
   ></app-users>
 </section>
 
