--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,4 +1,5 @@
 <section class="container">
+  <p><b>props: </b>{{item}}</p>
   <div class="container search-table">
     <div class="search-box">
       <div class="row">
